client/src/components/pages/bookFacility/bookfacility.css
.bookFacilities{
    width: 100vw;
    height: 100vh;
    background: #f9f9f9;
    display: flex;
    align-items: center;
    justify-content: center;
    font-family: Arimo;
    overflow: auto;
}

.facWrapper{
  margin-top:140px;
  width: 90%;
  height: 100%;
  display: flex;
}

.facilities{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    flex: 2.5;
    margin-right: 30px;
    background-color: white;
    box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.09);
    border-radius: 10px;
    height: 100%;
  }

  .bookFacilityDescription{
    margin-top: 25px;
    text-align: center;
  }
  
  .bookFacilityDescription > h3{
    color: #032539;
    font-weight: 800;
  }

.gridFormat{
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  text-align: center;
  gap: 20px;
  padding: 20px;
  width: 100%;
  height: 90%;
}

